src/objects/HADevice__c.object
<CustomObject>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <label>ActivationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>HADevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <label>RegistrationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CloudSocket</label>
    <listViews>
        <fullName>AdminView</fullName>
        <columns>NAME</columns>
        <columns>ActivationDate__c</columns>
        <columns>RegistrationDate__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Mine</filterScope>
        <label>AdminView</label>
    </listViews>
    <listViews>
        <fullName>bbvnbvn</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>bbvnbvn</label>
    </listViews>
    <nameField>
        <displayFormat>HAD-{000000}</displayFormat>
        <label>Device Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudSockets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>